--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 cmake_minimum_required(VERSION 3.10)
 
 project(
@@ -33,15 +32,16 @@ add_compile_options(
 # add the executable
 add_executable(${PROJECT_NAME} ${SOURCES})
 
-# Note: AVR custom target settings were derived from 
-# https://www.kuon.ch/post/2018-07-11-avr-cmake/
+if (${CMAKE_SYSTEM_PROCESSOR} MATCHES avr)
+    # Note: AVR custom target settings were derived from 
+    # https://www.kuon.ch/post/2018-07-11-avr-cmake/
+    set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME}.elf)
 
-set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME}.elf)
+    add_custom_target(strip ALL avr-strip ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.elf DEPENDS ${PROJECT_NAME})
+    add_custom_target(hex ALL avr-objcopy -R .eeprom -O ihex ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.elf ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.hex DEPENDS strip)
+    add_custom_target(eeprom avr-objcopy -j .eeprom  --set-section-flags=.eeprom="alloc,load"  --change-section-lma .eeprom=0 -O ihex ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.elf ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.eep DEPENDS strip)
+    add_custom_target(upload avrdude -F -V -c ${PROG_TYPE} -p ${MCU} -P COM3 -U flash:w:${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.hex DEPENDS hex)
+    add_custom_target(upload_eeprom avrdude -F -V -c ${PROG_TYPE} -p ${MCU} -P COM3 -U eeprom:w:${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.eep DEPENDS eeprom)
 
-add_custom_target(strip ALL avr-strip ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.elf DEPENDS ${PROJECT_NAME})
-add_custom_target(hex ALL avr-objcopy -R .eeprom -O ihex ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.elf ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.hex DEPENDS strip)
-add_custom_target(eeprom avr-objcopy -j .eeprom  --set-section-flags=.eeprom="alloc,load"  --change-section-lma .eeprom=0 -O ihex ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.elf ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.eep DEPENDS strip)
-add_custom_target(upload avrdude -F -V -c ${PROG_TYPE} -p ${MCU} -P COM3 -U flash:w:${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.hex DEPENDS hex)
-add_custom_target(upload_eeprom avrdude -F -V -c ${PROG_TYPE} -p ${MCU} -P COM3 -U eeprom:w:${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.eep DEPENDS eeprom)
-
-set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.hex;${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.eeprom;${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.lst")
+    set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.hex;${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.eeprom;${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${PROJECT_NAME}.lst")
+endif()
